# c_objects

./: CMakeLists.txt  LICENSE  README.md  main.c
lib/include/: class.h  list_functions.h  string_class.h  string_test.h  vector_class.h
lib/src/: class.c  list_functions.c  string_class.c  string_test.c  vector_class.c
test/: test.h  test_0.c  test_1.c  test_2.c
tutorials/0_introduction/: 0_intro.md  1_function_pointers.md
tutorials/1_abstraction/: 2_basic_example.md  3_moving_forward.md
tutorials/2_polymorphism/: 4_base_class.md  5_new_and_del.md
tutorials/introduction/: 2_function_pointers.md
tutorials/polymorphism/: 4_base_class.md
